# imguiWin

./: CMakeLists.txt  README.md  fileCleaner141114.bat
example/: example.sln  example.vcxproj  example.vcxproj.filters  main.cpp
include/: imguiWin.h
src/: framework.h  imguiWin.cpp
src/imgui-bindings/: imgui_impl_sdl.cpp
vs2010/: imguiWin.vcxproj  imguiWin_vs2010.sln
vs2019/: imguiWin.vcxproj  imguiWin.vcxproj.filters  imguiWin_vs2019.sln  imgui_win.vcxproj  imgui_win.vcxproj.filters  imgui_win_vs2019.sln
